--- a/acaiteria-sjs/src/index.html
+++ b/acaiteria-sjs/src/index.html
@@ -20,6 +20,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Sansita+Swashed:wght@800&display=swap"
     rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
   <!-- fonte playbal -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
